# kanshi

./: .build.yml  ctl.c  event-loop.c  ipc.c  main.c  meson.build  parser.c
doc/: kanshi.1.scd  kanshi.5.scd  kanshictl.1.scd  meson.build
include/: config.h  ipc.h  kanshi.h
protocol/: meson.build
